--- a/.github/workflows/frontend-cd.yaml
+++ b/.github/workflows/frontend-cd.yaml
@@ -11,7 +11,9 @@ on:
 
 # Build jobs test, lint =================================================
 jobs:
-  build:
+  # lint job =================================================
+  lint-job:
+    name: Linting
     runs-on: ubuntu-latest
 
     steps:
@@ -41,9 +43,49 @@ jobs:
       - name: Run lint check
         run: cd ./starter/frontend && npm run lint
 
+  # Test jobs ==========================================================
+  test-job:
+    name: Testing job
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup nodejs
+        uses: actions/setup-node@v3
+        with:
+          node-version: 14
+
+      - name: Restore dependencies
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
+
+      - name: Install dependencies
+        run: cd ./starter/frontend && npm install
+
+      - name: Install prettier
+        run: |
+          cd ./starter/frontend 
+          npm install prettier@2.8.8 --save-dev
+
       - name: Run test
         run: cd ./starter/frontend && npm run test
-      
+
+
+
+  # Build test, lint ==========================================================
+  build:
+    needs: [lint-job, test-job]
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v3
+        
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
